--- a/get_presentation_v2.html
+++ b/get_presentation_v2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Git & GitHub: 3D Visual Guide - RK</title>
+    <title>Git & GitHub: 3D Visual Guide - RK - Edge up your career</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
         :root {
